@@ -24,6 +24,9 @@
 2009-09-16  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> magick/nt_base.c (NTGhostscriptFind): Make sure we close the
+        registry key.  Log any Windows error messages.
+
   <LI> magick/profile.c (AppendImageProfile): New function to add or
         append a profile.  If the profile already exists, then the data
         provided is appended to it.
